add keepalive server

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -17,6 +17,12 @@ http {
     sendfile           on;
     keepalive_timeout  65;
 
+    upstream memcached {
+        server 127.0.0.1:11211;
+
+        keepalive 1024;
+    }
+
     server {
         listen       80;
         server_name  localhost;
@@ -54,9 +60,6 @@ http {
             secure_cookie_md5 private_captcha_key$binary_remote_addr$secure_cookie_set_expires_base64;
             secure_cookie_md5_to_number $secure_cookie_set_md5;
 
-            add_header Set-Cookie "CAPTCHA_SESSION=$secure_cookie_set_md5; expires=$secure_cookie_set_expires;";
-            add_header Set-Cookie "CAPTCHA_EXPIRES=$secure_cookie_set_expires_base64; expires=$secure_cookie_set_expires;";
-
             set $number $secure_cookie_md5_number;
 
             content_by_lua '
@@ -71,11 +74,7 @@ http {
                 { args = { cmd = "get", key = res_key.body } }
             )
 
-            if res.status == 200 then
-                ngx.print(res.body)
-            else
-                ngx.exit(ngx.HTTP_FORBIDDEN)
-            end
+            ngx.exec("/memc_img", { cmd = "get", key = res_key.body })
             ';
         }
 
@@ -152,7 +151,25 @@ http {
             set $memc_cmd $arg_cmd;
             set $memc_key $arg_key;
 
-            memc_pass 127.0.0.1:11211;
+            memc_pass memcached;
+        }
+
+	    location /memc_img {
+            internal;
+
+            default_type 'image/jpeg';
+
+            secure_cookie_expires  600;
+            secure_cookie_md5 private_captcha_key$binary_remote_addr$secure_cookie_set_expires_base64;
+            secure_cookie_md5_to_number $secure_cookie_set_md5;
+
+            add_header Set-Cookie "CAPTCHA_SESSION=$secure_cookie_set_md5; expires=$secure_cookie_set_expires;";
+            add_header Set-Cookie "CAPTCHA_EXPIRES=$secure_cookie_set_expires_base64; expires=$secure_cookie_set_expires;";
+
+            set $memc_cmd $arg_cmd;
+            set $memc_key $arg_key;
+
+            memc_pass memcached;
         }
 
         #error_page  404              /404.html;
