make captcha string is case insensitive

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -114,6 +114,9 @@ http {
             local args = ngx.req.get_post_args()
             response = args["response"]
 
+            response = string.lower(response)
+            key = string.lower(key)
+
             if response == key then 
                ngx.exec("@set_secure_cookie")
             else
