don't redirect to ico page

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -138,6 +138,10 @@ http {
                 set $redirect_page $cookie_ORIGIN_URI;
             }
 
+            if ($cookie_ORIGIN_URI ~* "\.ico") {
+                set $redirect_page "/";
+            }
+
             #return the original request uri
             rewrite ^.*$ $redirect_page redirect;
 
