--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,4 +1,3 @@
-
 #daemon off;
 #user  nobody;
 worker_processes  2;
@@ -65,6 +64,7 @@ http {
             content_by_lua '
             local n = ngx.var.number
             index = n % 10000
+            index = index + 1
 
             local res_key = ngx.location.capture("/memc",
                 { args = { cmd = "get", key = index } }
@@ -98,6 +98,7 @@ http {
             content_by_lua '
             local n = ngx.var.number
             index = n % 10000
+            index = index + 1
 
             local res = ngx.location.capture("/memc",
                 { args = { cmd = "get", key = index } }
